<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:focusable="true"
android:focusableInTouchMode="true"
tools:context="com.example.macbook.winmap.MainActivity">


<ProgressBar
    android:id="@+id/signup_progress_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:indeterminate="true"
    android:indeterminateTint="@color/black"
    android:indeterminateTintMode="src_atop" />

<TextView
    android:id="@+id/tv_title_signup"
    style="@style/subtitle"
    android:text="@string/inscription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp">

        <RadioButton
            android:id="@+id/radioBuyer"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_orange_dark"
            android:text="Acheteur"
            android:onClick="onRadioButtonClicked"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Vendeur"
            android:onClick="onRadioButtonClicked"
            android:textColor="@android:color/holo_orange_dark" />
    </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:hint="Nom de l'entreprise"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/red3" />

    <EditText
        android:id="@+id/et_adress_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:hint="Adresse"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/red3" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/votre_nom"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/red3" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:ems="10"
        android:textColor="@color/red3"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:hint="@string/votre_prenom" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:ems="10"
        android:layout_margin="15dp"
        android:textColor="@color/red3"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/votre_e_mail"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/red3"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/votre_mot_de_passe"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/red3"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>

<Button
    android:id="@+id/btn_signup"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_margin="15dp"
    android:textColor="@color/white"
    android:text="@string/inscrire" />

<TextView
    android:id="@+id/tv_go_to_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal"
    android:text="@string/go_to_login"/>

</LinearLayout>
</ScrollView>

